--- a/src/main/resources/quartz.yml
+++ b/src/main/resources/quartz.yml
@@ -1,28 +1,40 @@
-# 相关属性配置、固定前缀org.quartz
-# 主要分为scheduler、threadPool、jobStore、dataSource、plugin等部分
+# \u56FA\u5B9A\u524D\u7F00org.quartz
+# \u4E3B\u8981\u5206\u4E3Ascheduler\u3001threadPool\u3001jobStore\u3001plugin\u7B49\u90E8\u5206
 org:
   quartz:
     scheduler:
+      # \u8C03\u5EA6\u5668\u5B9E\u4F8B\u540D\u79F0
       instanceName: spring_boot_quartz
+      # \u8C03\u5EA6\u5668\u5B9E\u4F8B\u7F16\u53F7\u81EA\u52A8\u751F\u6210
       instanceId: AUTO
       wrapJobExecutionInUserTransaction: false
       rmi:
         export: false
         proxy: false
     threadPool:
+      # \u7EBF\u7A0B\u6C60\u5B9E\u73B0\u7C7B
       class: org.quartz.simpl.SimpleThreadPool
-      threadCount: '20'
-      threadPriority: '6'
+      # \u6267\u884C\u6700\u5927\u5E76\u53D1\u7EBF\u7A0B\u6570\u91CF
+      threadCount: '10'
+      # \u7EBF\u7A0B\u4F18\u5148\u7EA7
+      threadPriority: '5'
+      # \u662F\u5426\u542F\u52A8\u81EA\u52A8\u52A0\u8F7D\u6570\u636E\u5E93\u5185\u7684\u5B9A\u65F6\u4EFB\u52A1
       threadsInheritContextClassLoaderOfInitializingThread: true
     jobStore:
       misfireThreshold: '5000'
+      # \u6301\u4E45\u5316
       class: org.quartz.impl.jdbcjobstore.JobStoreTX
+      # \u6301\u4E45\u5316\u65B9\u5F0F\u914D\u7F6E\u6570\u636E\u9A71\u52A8\uFF0CMySQL\u6570\u636E\u5E93
       driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+      # quartz\u76F8\u5173\u6570\u636E\u8868\u524D\u7F00\u540D
       tablePrefix: QRTZ_
+      # \u5F00\u542F\u5206\u5E03\u5F0F\u90E8\u7F72
       isClustered: true
+      # \u5206\u5E03\u5F0F\u8282\u70B9\u6709\u6548\u6027\u68C0\u67E5\u65F6\u95F4\u95F4\u9694\uFF0C\u5355\u4F4D\uFF1A\u6BEB\u79D2
       clusterCheckinInterval: '10000'
       dataSource: qzDS
     dataSource:
+      # \u6570\u636E\u6E90\u76F8\u5173\u914D\u7F6E
       qzDS:
         driver: com.mysql.cj.jdbc.Driver
         URL: jdbc:mysql://127.0.0.1:3306/spring_boot_quartz?useSSL=FALSE&allowMultiQueries=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
