--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -31,7 +31,7 @@ org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDele
 # quartz\u76F8\u5173\u6570\u636E\u8868\u524D\u7F00\u540D
 org.quartz.jobStore.tablePrefix=QRTZ_
 # \u5F00\u542F\u5206\u5E03\u5F0F\u90E8\u7F72
-org.quartz.jobStore.isClustered=true
+org.quartz.jobStore.isClustered=false
 # \u5206\u5E03\u5F0F\u8282\u70B9\u6709\u6548\u6027\u68C0\u67E5\u65F6\u95F4\u95F4\u9694\uFF0C\u5355\u4F4D\uFF1A\u6BEB\u79D2
 org.quartz.jobStore.clusterCheckinInterval=20000
 org.quartz.jobStore.dataSource=qzDS
